src/test/deca/avecObjet/valid/cast_implicite.deca
// Description :
//    Cast implicite d'un int vers un float.
//
// Resultats :
//    ok

{
    int a = 5;
    float f = (float) (a);
}