src/test/deca/avecObjet/invalid/nonDecl copy.deca
// Description :
//    Utilisation d'une variable non déclarée.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Variable x non déclarée

{
	x = 5;
}
